Employee without edit

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "T.S Dashboard",
-  "name": "Train System Dashboard",
+  "name": "booking System Dashboard",
   "icons": [
     {
       "src": "logo.ico",
