--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_TOKEN_NAME = tt
-REACT_APP_MY_BACKEND_HOST= http://localhost:4000
+REACT_APP_MY_BACKEND_HOST= https://booking-system-apis-1199.herokuapp.com
