--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_TOKEN_NAME = tt
-REACT_APP_MY_BACKEND_HOST= https://booking-system-apis.herokuapp.com
+REACT_APP_MY_BACKEND_HOST= http://localhost:4000
+REACT_APP_USER_AVATAR_PATH = /static/UserAvatar/
+REACT_APP_EMPLOYEE_AVATAR_PATH = /static/EmployeeAvatar/
